[BUGFIX] Ensure scrollbar styling is evaluated for each element
The CSS property `--typo3-text-color-base` is changed on a per-element
basis (e.g. with the class mode theme) and therefore the scrollbar
style needs to applied based on the current value of this variable.

Resolves: #105223
Releases: main
Reviewed-on: https://review.typo3.org/c/Packages/TYPO3.CMS/+/86454
Tested-by: Benjamin Franzke <ben@bnf.dev>
Tested-by: Andreas Kienast <akienast@scripting-base.de>
Tested-by: core-ci <typo3@b13.com>

--- a/typo3/sysext/backend/Resources/Public/Css/backend.css
+++ b/typo3/sysext/backend/Resources/Public/Css/backend.css
@@ -2132,7 +2132,8 @@ to{transform:rotate(360deg)}
 .modal-backdrop.in{opacity:.5}
 div.typo3-localizationLink,div.typo3-newRecordLink,div.typo3-synchronizationLink{display:inline}
 :root{--scaffold-color:var(--typo3-text-color-base);--scaffold-bg:var(--typo3-surface-base);--scaffold-border-color:color-mix(in srgb, var(--typo3-surface-base), var(--scaffold-color) var(--typo3-border-mix));--scaffold-gap:.5rem;--scaffold-header-height:3.75rem;--scaffold-header-color:var(--typo3-text-color-base);--scaffold-header-bg:var(--typo3-surface-bright);--scaffold-header-box-shadow:var(--typo3-shadow-2);--scaffold-header-item-height:2.5rem;--scaffold-header-item-width:2.5rem;--scaffold-header-item-border-radius:.25rem;--scaffold-header-padding-y:.5rem;--scaffold-header-padding-x:.5rem;--scaffold-header-foldout-bg:var(--typo3-surface-container-high);--scaffold-header-zindex:var(--typo3-zindex-header);--scaffold-modulemenu-color:var(--typo3-text-color-base);--scaffold-modulemenu-bg:var(--typo3-surface-container-high);--scaffold-modulemenu-expanded-width:240px;--scaffold-modulemenu-box-shadow:var(--typo3-shadow-2);--scaffold-content-navigation-width:300px;--scaffold-content-navigation-drag-bg:color-mix(in srgb, var(--typo3-surface-container-high), var(--typo3-text-color-base) 10%);--scaffold-content-navigation-drag-bg-hover:color-mix(in srgb, var(--typo3-surface-container-high), var(--typo3-text-color-base) 15%);--scaffold-content-navigation-switcher-bg:var(--typo3-surface-container-base);--scaffold-content-navigation-switcher-border:color-mix(in srgb, var(--typo3-surface-container-base), var(--typo3-text-color-base) 10%)}
-html{height:100%;overflow:hidden;scrollbar-color:color-mix(in srgb,var(--typo3-text-color-base),transparent 75%) transparent}
+html{height:100%;overflow:hidden}
+*{scrollbar-color:color-mix(in srgb,var(--typo3-text-color-base),transparent 75%) transparent}
 body{height:100%;color:var(--scaffold-color);background-color:var(--scaffold-bg)}
 body.with-overflow{overflow:auto}
 iframe{color:var(--scaffold-color);background-color:var(--scaffold-bg)}
